[tool.poetry]
name = "flask-orm"
version = "0.0.2"
description = "an easy way to use sqlalchemy in your flask app"
authors = ["kyle roux <jstacoder@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
flask = "^1.0"
sqlalchemy = "^1.3"
pytest = "^4.4"
sqlalchemy-stubs = "^0.1.0"
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "=5.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
